--- a/app/src/main/res/layout/activity_select_site.xml
+++ b/app/src/main/res/layout/activity_select_site.xml
@@ -67,4 +67,33 @@
         android:textColor="#ffffff"
         android:visibility="gone" />
 
+    <AutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/autoCompleteTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="Buscar..." />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/place_details"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="15sp"
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/place_attribution"
+        android:layout_toRightOf="@+id/place_details"
+        android:layout_toEndOf="@+id/place_details"
+        android:textSize="15sp"
+         />
+
 </RelativeLayout>
