--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,6 +37,6 @@
         android:layout_alignParentStart="true"
         android:src="@drawable/ic_location_searching_white_24dp"
         android:padding="15sp"
-        android:background="#dc3f51b5" />
+        android:background="@color/colorPrimaryDark" />
 
 </RelativeLayout>
